[gd_scene load_steps=11 format=3 uid="uid://byqjx6g218fav"]

[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_mq5e3"]
[ext_resource type="PackedScene" uid="uid://b1i3ak7mkryng" path="res://scenes/entities/player/camera_controller.tscn" id="2_phfee"]
[ext_resource type="PackedScene" uid="uid://cxivj8i2g2xqf" path="res://scenes/entities/player/godette_skin.tscn" id="3_63vn0"]
[ext_resource type="PackedScene" uid="uid://bitcibkdrji1n" path="res://scenes/entities/ui/ui.tscn" id="4_4jc72"]
[ext_resource type="AudioStream" uid="uid://q016xqptbrb" path="res://audio/steps.mp3" id="5_als15"]
[ext_resource type="AudioStream" uid="uid://brog30lvnpr6b" path="res://audio/sword sound.wav" id="6_h2vt5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5u2ei"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wco8y"]
emission_shape = 1
emission_sphere_radius = 0.6
gravity = Vector3(0, 1, 0)
scale_min = 0.1
scale_max = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n8sf0"]
albedo_color = Color(0.698039, 0.698039, 0.698039, 1)
metallic_specular = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_x83o1"]
material = SubResource("StandardMaterial3D_n8sf0")

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_mq5e3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5u2ei")

[node name="CameraController" parent="." instance=ExtResource("2_phfee")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 1.4, 0)
min_limit_x = -0.8
max_limit_x = -0.2

[node name="GodetteSkin" parent="." instance=ExtResource("3_63vn0")]

[node name="UI" parent="." instance=ExtResource("4_4jc72")]

[node name="invul" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="energyrecov" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.155
autostart = true

[node name="Run" type="GPUParticles3D" parent="."]
transparency = 0.1
cast_shadow = 0
amount = 11
process_material = SubResource("ParticleProcessMaterial_wco8y")
draw_pass_1 = SubResource("SphereMesh_x83o1")

[node name="walk" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_als15")
volume_db = -13.384

[node name="sword" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_h2vt5")

[connection signal="timeout" from="energyrecov" to="." method="_on_energyrecov_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
